# skilltree

./: .gitattributes  .gitignore  CONTRIBUTING.md  Cargo.toml  LICENSE-BSD  README.md  flake.nix  rust-toolchain.toml  rustfmt.toml
.cargo/: config.toml
.github/workflows/: ci.yaml
assets/runtime_libs/arm64-v8a/: .gitignore
scripts/: usbipd_attach.ps1  usbipd_attach.sh
skills/blendshapes/: Cargo.toml  README.md
skills/blendshapes/src/: main.rs
skills/cube/: Cargo.toml  README.md
skills/cube/src/: main.rs
skills/egui-texture/: Cargo.toml
skills/egui-texture/src/: main.rs  render_node.rs  render_systems.rs
skills/entity-inspector/: Cargo.toml  README.md
skills/entity-inspector/src/: main.rs
skills/flycam/: Cargo.toml
skills/flycam/src/: lib.rs  main.rs
skills/ik/: Cargo.toml  README.md
skills/ik/assets/: malek.gltf
skills/ik/src/: main.rs
skills/manipulation-flatscreen/: Cargo.toml  README.md
skills/manipulation-flatscreen/src/: main.rs
skills/openxr-6dof/: Cargo.toml  README.md  manifest.yaml
skills/openxr-6dof/src/: lib.rs  main.rs  projection.rs
skills/worldspace-ui/: Cargo.toml  README.md
skills/worldspace-ui/src/: main.rs  render_node.rs  render_systems.rs
skills/xr-ik-mirror/: Cargo.toml
skills/xr-ik-mirror/src/: lib.rs  main.rs
