[workspace]
resolver = "2"
members = [
	"skills/cube",
	"skills/egui-texture",
	"skills/ik",
	"skills/manipulation-flatscreen",
	"skills/openxr-6dof",
	"skills/xr-ik-mirror",
]

# These settings will apply to all members of the workspace that opt in to them
[workspace.package]
version = "0.0.0"
license = "MIT OR BSD-2-Clause-Patent"
repository = "https://github.com/NexusSocial/skilltree"
edition = "2021"
rust-version = "1.72.0"

[workspace.dependencies]
bevy = "0.11.2"
bevy_mod_picking = "0.15.0"
color-eyre = "0.6"
eyre = "0.6"
tracing = "0.1"
bevy_egui = "0.21"
egui-wgpu = "0.22"
bevy-inspector-egui = "0.19"
wgpu = "0.16"
bevy_flycam = { git = "https://github.com/sburris0/bevy_flycam", branch = "bevy_0.11" }

# Enable a small amount of optimization in debug mode
[profile.dev]
opt-level = 1
