[workspace]
resolver = "2"
members = [
	"skills/cube",
	"skills/worldspace-ui",
	"skills/ik",
	"skills/manipulation-flatscreen",
	"skills/openxr-6dof",
	"skills/xr-ik-mirror",
	"skills/entity-inspector",
]

# These settings will apply to all members of the workspace that opt in to them
[workspace.package]
version = "0.0.0"
license = "MIT OR BSD-2-Clause-Patent"
repository = "https://github.com/NexusSocial/skilltree"
edition = "2021"
rust-version = "1.73.0"

[workspace.dependencies]
bevy = "0.12.0"
bevy_mod_picking = "0.17.0"
color-eyre = "0.6"
eyre = "0.6"
tracing = "0.1"
bevy_egui = "0.23"
egui-wgpu = "0.23"
egui = "0.23"
bevy-inspector-egui = "0.21.0"
wgpu = "0.17"
bevy_flycam = "0.12"
bevy_oxr = "0.1"
openxr = "0.17.1"
bevy_mod_inverse_kinematics = "0.5"

# Enable a small amount of optimization in debug mode
[profile.dev]
opt-level = 1
