[package]
name = "cube"
version.workspace = true
license.workspace = true
repository.workspace = true
edition.workspace = true
rust-version.workspace = true
publish = false

# Current maintainer(s)
authors = ["Ryan Butler <thebutlah@gmail.com>"]

[dependencies]
bevy.workspace = true
color-eyre.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
