[package]
name = "egui-texture"
version.workspace = true
license.workspace = true
repository.workspace = true
edition.workspace = true
rust-version.workspace = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bevy.workspace = true
bevy_egui.workspace = true
bevy_flycam.workspace = true
color-eyre.workspace = true
egui-wgpu.workspace = true
egui.workspace = true
wgpu.workspace = true
