[package]
name = "manipulation-flatscreen"
version.workspace = true
license.workspace = true
repository.workspace = true
edition.workspace = true
rust-version.workspace = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bevy.workspace = true
color-eyre.workspace = true
tracing.workspace = true
bevy_mod_picking.workspace = true