[package]
name = "openxr-6dof"
version.workspace = true
license.workspace = true
repository.workspace = true
edition.workspace = true
rust-version.workspace = true

[lib]
crate-type = ["staticlib", "cdylib", "rlib"]

[dependencies]
openxr = { version = "0.17.1" }
bevy = "0.12"
bevy_oxr = { version = "0.1", default-features = false }
color-eyre.workspace = true
