[package]
name = "openxr-6dof"
version.workspace = true
license.workspace = true
repository.workspace = true
edition.workspace = true
rust-version.workspace = true

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
openxr.workspace = true
bevy.workspace = true
bevy_oxr.workspace = true
color-eyre.workspace = true
