[package]
name = "worldspace-ui"
version.workspace = true
license.workspace = true
repository.workspace = true
edition.workspace = true
rust-version.workspace = true

[dependencies]
bevy.workspace = true
bevy_egui.workspace = true
bevy_flycam.workspace = true
color-eyre.workspace = true
egui-wgpu.workspace = true
egui.workspace = true
wgpu.workspace = true
