[package]
name = "xr-ik-mirror"
version.workspace = true
license.workspace = true
repository.workspace = true
edition.workspace = true
rust-version.workspace = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
openxr = { version = "0.17.1" }
bevy = { git = "https://github.com/awtterpip/bevy" }
bevy_openxr = { git = "https://github.com/awtterpip/bevy_openxr" }
color-eyre.workspace = true
bevy_mod_inverse_kinematics = { git = "https://github.com/MalekiRe/bevy_mod_inverse_kinematics"}