[package]
name = "xr-ik-mirror"
version.workspace = true
license.workspace = true
repository.workspace = true
edition.workspace = true
rust-version.workspace = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bevy.workspace = true
bevy_oxr.workspace = true
color-eyre.workspace = true
bevy_mod_inverse_kinematics.workspace = true
